--- a/src/forms/uFormForm1.lfm
+++ b/src/forms/uFormForm1.lfm
@@ -55,7 +55,7 @@ object Form1: TForm1
     object ToolButton6: TToolButton
       Left = 1
       Top = 2
-      Action = acDocFileNew
+      Action = acDocNewCustom
     end
     object ToolButton7: TToolButton
       Left = 47
@@ -173,10 +173,10 @@ object Form1: TForm1
       Height = 377
       Top = 1
       Width = 698
-      ActivePage = TabSheet2
+      ActivePage = TabSheet1
       Anchors = [akTop, akLeft, akRight, akBottom]
       BorderSpacing.Bottom = 10
-      TabIndex = 1
+      TabIndex = 0
       TabOrder = 2
       OnChange = PageControl1Change
       object TabSheet1: TTabSheet
@@ -377,7 +377,7 @@ object Form1: TForm1
       SimplePanel = False
     end
   end
-  object ActionList1: TActionList
+  object actions: TActionList
     Images = Images16
     left = 400
     top = 220
@@ -407,34 +407,6 @@ object Form1: TForm1
       Caption = 'acVerViewSup'
       ImageIndex = 20
       OnExecute = acVerViewSupExecute
-    end
-    object acDocFileNew: TAction
-      Category = 'File'
-      Caption = 'acDocFileNew'
-      ImageIndex = 2
-      OnExecute = acDocNew_onExecute
-      ShortCut = 16462
-    end
-    object acDocFileOpen: TAction
-      Category = 'File'
-      Caption = 'acDocFileOpen'
-      ImageIndex = 3
-    end
-    object acDocFileSave: TAction
-      Category = 'File'
-      Caption = 'acDocFileSave'
-      ImageIndex = 4
-    end
-    object acDocFileClose: TAction
-      Category = 'File'
-      Caption = 'acDocFileClose'
-      OnExecute = acDocFileCloseExecute
-    end
-    object acDocFileLeave: TAction
-      Category = 'File'
-      Caption = 'acDocFileLeave'
-      ImageIndex = 6
-      OnExecute = acDocFileLeaveExecute
     end
     object acDocAddPage: TAction
       Category = 'Doc'
@@ -486,6 +458,39 @@ object Form1: TForm1
       ImageIndex = 35
       OnExecute = acPageAddLineExecute
     end
+    object acDocNew: TAction
+      Category = 'File'
+      Caption = 'acDocNew'
+      OnExecute = acDocNewExecute
+    end
+    object acDocNewCustom: TAction
+      Category = 'File'
+      Caption = 'acDocNewCustom'
+      ImageIndex = 2
+      OnExecute = acDocNew_onExecute
+      ShortCut = 16462
+    end
+    object acDocFileOpen: TAction
+      Category = 'File'
+      Caption = 'acDocFileOpen'
+      ImageIndex = 3
+    end
+    object acDocFileSave: TAction
+      Category = 'File'
+      Caption = 'acDocFileSave'
+      ImageIndex = 4
+    end
+    object acDocFileClose: TAction
+      Category = 'File'
+      Caption = 'acDocFileClose'
+      OnExecute = acDocFileCloseExecute
+    end
+    object acDocFileLeave: TAction
+      Category = 'File'
+      Caption = 'acDocFileLeave'
+      ImageIndex = 6
+      OnExecute = acDocFileLeaveExecute
+    end
   end
   object menuMain: TMainMenu
     Images = Images16
@@ -493,9 +498,13 @@ object Form1: TForm1
     top = 119
     object mFile: TMenuItem
       Caption = 'mFile'
+      OnClick = mFileClick
       object mfileNew: TMenuItem
-        Action = acDocFileNew
-        Caption = 'mfileNew'
+        Action = acDocNew
+        ImageIndex = 2
+      end
+      object mfileNewCustom: TMenuItem
+        Action = acDocNewCustom
       end
       object mfileOpen: TMenuItem
         Action = acDocFileOpen
