--- a/src/forms/uFormForm1.lfm
+++ b/src/forms/uFormForm1.lfm
@@ -1,5 +1,5 @@
 object Form1: TForm1
-  Left = 488
+  Left = 343
   Height = 541
   Top = 154
   Width = 855
@@ -501,6 +501,42 @@ object Form1: TForm1
       OnClick = mFileClick
       object mfileNew: TMenuItem
         Action = acDocNew
+        Bitmap.Data = {
+          36040000424D3604000000000000360000002800000010000000100000000100
+          2000000000000004000064000000640000000000000000000000000000000000
+          0003150015241300133413001335130013351300133513001335130013351300
+          1335130013351300133513001335140014310F000F1000000000000000000000
+          0009D4B1A2FFD5BFBBFFD5BFBBFFD5BFBCFFD5BFBCFFD5BFBCFFD5BFBCFFD5BF
+          BCFFD5C0BCFFD6C0BCFFD4BEBAFFC6A19AFF1600162E00000001000000000000
+          000AEBD8C8FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
+          EBFFEBEBEBFFECEBECFFEAEAEAFFD4BDB9FF1400143100000001000000000000
+          000AEBD9C8FFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECEC
+          ECFFECECECFFECECECFFEBEBEBFFD4BDB8FF1400143100000001000000000000
+          000AEBD8C6FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
+          EBFFEBEBEBFFEBEBEBFFEAEAEAFFD4BCB7FF1400143100000001000000000000
+          000AEBD7C5FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
+          EBFFEBEBEBFFEBEBEBFFEAEAEAFFD3BBB6FF1400143100000001000000000000
+          000AEBD8C5FFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECEC
+          ECFFECECECFFECECECFFEAEAEAFFD3BBB5FF1400143100000001000000000000
+          000AEDDAC8FFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
+          EEFFEEEEEEFFEEEEEEFFECECECFFD3BCB7FF1400143100000001000000000000
+          000AEEDCCAFFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0
+          F0FFF0F0F0FFF0F0F0FFEEEEEEFFD4BDB9FF1400143100000001000000000000
+          000AEFDDCCFFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0
+          F0FFF0F0F0FFF0F0F0FFEEEEEEFFD5BEBAFF1400143100000001000000000000
+          000AEFDECEFFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1
+          F1FFF1F1F1FFF1F1F1FFF0EFF0FFD5BFBCFF1400143100000001000000000000
+          000AF1E1D1FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2
+          F2FFF2EEEAFFF2E2D2FFF0E0D1FFD6B6A9FF1300132800000000000000000000
+          000AF2E3D6FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4
+          F4FFF3E4D5FFF7E0CEFFF1D6C4FFB68F7C891C001C0900000000000000000000
+          000AF5E7DBFFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7
+          F7FFF6E8DBFFF1D7C4FFBB947E891900190A0000000000000000000000000000
+          0007F4DECAFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EA
+          DFFFF1DBC9FFC09881861900190A000000000000000000000000000000000000
+          0001000000070000000A0000000A0000000A0000000A0000000A0000000A0000
+          000A0000000A0000000400000000000000000000000000000000
+        }
         ImageIndex = 2
       end
       object mfileNewCustom: TMenuItem
@@ -6401,8 +6437,7 @@ object Form1: TForm1
     left = 296
     top = 296
     object pviewProperties: TMenuItem
-      Caption = 'pviewProperties'
-      ImageIndex = 32
+      Action = acViewProp
     end
   end
 end
