--- a/src/forms/uFormForm1.lfm
+++ b/src/forms/uFormForm1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 343
+  Left = 438
   Height = 541
-  Top = 104
+  Top = 100
   Width = 855
   Caption = 'gTitoCAD'
   ClientHeight = 512
@@ -20,31 +20,36 @@ object Form1: TForm1
     AnchorSideTop.Control = Owner
     AnchorSideRight.Control = Owner
     Left = 0
-    Height = 26
+    Height = 42
     Top = 0
     Width = 855
+    ButtonHeight = 38
+    ButtonWidth = 38
     Caption = 'ToolBar'
     Color = clMenuBar
-    Images = Images16
+    Images = Images32
     ParentColor = False
     TabOrder = 0
     OnClick = ToolBarClick
     object btnNewCustomDoc: TToolButton
       Left = 1
       Top = 2
-      Action = acDocNewCustom
+      Caption = 'acDocNewCustom'
+      ImageIndex = 2
+      OnClick = btnNewCustomDocClick
     end
     object btnSep1: TToolButton
-      Left = 24
-      Height = 22
+      Left = 39
+      Height = 38
       Top = 2
       Caption = 'btnSep1'
       Style = tbsSeparator
     end
     object btnPoly: TToolButton
-      Left = 32
+      Left = 47
       Top = 2
       Action = acDrawLinePoly
+      ImageIndex = 31
     end
   end
   object WrapperMiddle: TPanel
@@ -55,12 +60,12 @@ object Form1: TForm1
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = WrapperBottom
     Left = 0
-    Height = 389
-    Top = 26
+    Height = 373
+    Top = 42
     Width = 855
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'WrapperMiddle'
-    ClientHeight = 389
+    ClientHeight = 373
     ClientWidth = 855
     Color = clMenuBar
     ParentColor = False
@@ -72,17 +77,17 @@ object Form1: TForm1
       AnchorSideBottom.Control = WrapperMiddle
       AnchorSideBottom.Side = asrBottom
       Left = 1
-      Height = 377
+      Height = 361
       Top = 1
       Width = 150
       Anchors = [akTop, akLeft, akRight, akBottom]
       BorderSpacing.Bottom = 10
-      ClientHeight = 377
+      ClientHeight = 361
       ClientWidth = 150
       Color = clMenuBar
       ParentColor = False
       inherited treeNav: TTreeView
-        Height = 353
+        Height = 337
         Width = 150
         BackgroundColor = clWhite
         Color = clWhite
@@ -99,7 +104,7 @@ object Form1: TForm1
       AnchorSideBottom.Control = WrapperMiddle
       AnchorSideBottom.Side = asrBottom
       Left = 151
-      Height = 387
+      Height = 371
       Top = 1
       Width = 5
       Align = alNone
@@ -116,7 +121,7 @@ object Form1: TForm1
       AnchorSideBottom.Control = WrapperMiddle
       AnchorSideBottom.Side = asrBottom
       Left = 156
-      Height = 377
+      Height = 361
       Top = 1
       Width = 698
       ActivePage = TabSheet1
@@ -327,18 +332,6 @@ object Form1: TForm1
     Images = Images16
     left = 400
     top = 220
-    object acPageAdd: TAction
-      Category = 'Page'
-      Caption = 'acDocAddPage'
-      ImageIndex = 34
-      OnExecute = acPageAddExecute
-    end
-    object acPageRemove: TAction
-      Category = 'Page'
-      Caption = 'acPageRemove'
-      ImageIndex = 21
-      OnExecute = acPageRemoveExecute
-    end
     object acPageProp: TAction
       Category = 'Page'
       Caption = 'acPageProp'
@@ -357,44 +350,11 @@ object Form1: TForm1
       ImageIndex = 35
       OnExecute = acDrawLinePolyExecute
     end
-    object acDocNew: TAction
-      Category = 'Doc'
-      Caption = 'acDocNew'
-      OnExecute = acDocNewExecute
-    end
-    object acDocNewCustom: TAction
-      Category = 'Doc'
-      Caption = 'acDocNewCustom'
-      ImageIndex = 2
-      OnExecute = acDocNew_onExecute
-      ShortCut = 16462
-    end
-    object acDocOpen: TAction
-      Category = 'Doc'
-      Caption = 'acDocOpen'
-      ImageIndex = 3
-    end
-    object acDocSave: TAction
-      Category = 'Doc'
-      Caption = 'acDocSave'
-      ImageIndex = 4
-    end
     object acDocProp: TAction
       Category = 'Doc'
       Caption = 'acDocProp'
       ImageIndex = 32
       OnExecute = acDocPropExecute
-    end
-    object acDocClose: TAction
-      Category = 'Doc'
-      Caption = 'acDocClose'
-      OnExecute = acDocCloseExecute
-    end
-    object acAppExit: TAction
-      Category = 'App'
-      Caption = 'acDocFileLeave'
-      ImageIndex = 6
-      OnExecute = acAppExitExecute
     end
   end
   object menuMain: TMainMenu
@@ -404,64 +364,19 @@ object Form1: TForm1
     object mFile: TMenuItem
       Caption = 'mFile'
       OnClick = mFileClick
-      object mfileNew: TMenuItem
-        Action = acDocNew
-        Bitmap.Data = {
-          36040000424D3604000000000000360000002800000010000000100000000100
-          2000000000000004000064000000640000000000000000000000000000000000
-          0003150015241300133413001335130013351300133513001335130013351300
-          1335130013351300133513001335140014310F000F1000000000000000000000
-          0009D4B1A2FFD5BFBBFFD5BFBBFFD5BFBCFFD5BFBCFFD5BFBCFFD5BFBCFFD5BF
-          BCFFD5C0BCFFD6C0BCFFD4BEBAFFC6A19AFF1600162E00000001000000000000
-          000AEBD8C8FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
-          EBFFEBEBEBFFECEBECFFEAEAEAFFD4BDB9FF1400143100000001000000000000
-          000AEBD9C8FFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECEC
-          ECFFECECECFFECECECFFEBEBEBFFD4BDB8FF1400143100000001000000000000
-          000AEBD8C6FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
-          EBFFEBEBEBFFEBEBEBFFEAEAEAFFD4BCB7FF1400143100000001000000000000
-          000AEBD7C5FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
-          EBFFEBEBEBFFEBEBEBFFEAEAEAFFD3BBB6FF1400143100000001000000000000
-          000AEBD8C5FFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECEC
-          ECFFECECECFFECECECFFEAEAEAFFD3BBB5FF1400143100000001000000000000
-          000AEDDAC8FFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
-          EEFFEEEEEEFFEEEEEEFFECECECFFD3BCB7FF1400143100000001000000000000
-          000AEEDCCAFFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0
-          F0FFF0F0F0FFF0F0F0FFEEEEEEFFD4BDB9FF1400143100000001000000000000
-          000AEFDDCCFFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0
-          F0FFF0F0F0FFF0F0F0FFEEEEEEFFD5BEBAFF1400143100000001000000000000
-          000AEFDECEFFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1F1FFF1F1
-          F1FFF1F1F1FFF1F1F1FFF0EFF0FFD5BFBCFF1400143100000001000000000000
-          000AF1E1D1FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2
-          F2FFF2EEEAFFF2E2D2FFF0E0D1FFD6B6A9FF1300132800000000000000000000
-          000AF2E3D6FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4F4FFF4F4
-          F4FFF3E4D5FFF7E0CEFFF1D6C4FFB68F7C891C001C0900000000000000000000
-          000AF5E7DBFFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7F7FFF7F7
-          F7FFF6E8DBFFF1D7C4FFBB947E891900190A0000000000000000000000000000
-          0007F4DECAFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EADFFFF6EA
-          DFFFF1DBC9FFC09881861900190A000000000000000000000000000000000000
-          0001000000070000000A0000000A0000000A0000000A0000000A0000000A0000
-          000A0000000A0000000400000000000000000000000000000000
-        }
-        ImageIndex = 2
-      end
       object mfileNewCustom: TMenuItem
-        Action = acDocNewCustom
-      end
-      object mfileOpen: TMenuItem
-        Action = acDocOpen
-        Caption = 'mfileOpen'
-      end
-      object mfileSave: TMenuItem
-        Action = acDocSave
-        Caption = 'mfileSave'
+        Caption = 'mfileNewCustom'
+        ImageIndex = 2
+        ShortCut = 16462
+        OnClick = mfileNewCustomClick
       end
       object mfileClose: TMenuItem
-        Action = acDocClose
         Caption = 'mfileClose'
+        OnClick = mfileCloseClick
       end
       object mfileExit: TMenuItem
-        Action = acAppExit
         Caption = 'mfileExit'
+        OnClick = mfileExitClick
       end
     end
     object mView: TMenuItem
@@ -474,8 +389,8 @@ object Form1: TForm1
     object mDoc: TMenuItem
       Caption = 'mDoc'
       object mdocAddPage: TMenuItem
-        Action = acPageAdd
         Caption = 'mdocAddPage'
+        OnClick = mdocAddPageClick
       end
       object mdocInsertPoly: TMenuItem
         Caption = 'mdocInsertPoly'
@@ -493,19 +408,12 @@ object Form1: TForm1
         ImageIndex = 34
       end
       object mpageRemove: TMenuItem
-        Action = acPageRemove
         Caption = 'mpageRemove'
+        OnClick = mpageRemoveClick
       end
       object mpageProperies: TMenuItem
         Action = acPageProp
         Caption = 'mpageProperies'
-      end
-    end
-    object mTools: TMenuItem
-      Caption = 'mTools'
-      object mtoolsConfig: TMenuItem
-        Caption = 'mtoolsConfig'
-        ImageIndex = 13
       end
     end
   end
@@ -6290,8 +6198,8 @@ object Form1: TForm1
     left = 216
     top = 220
     object pdocAddPage: TMenuItem
-      Action = acPageAdd
       Caption = 'pdocAddPage'
+      OnClick = pdocAddPageClick
     end
     object pdocProperies: TMenuItem
       Action = acDocProp
@@ -6319,8 +6227,8 @@ object Form1: TForm1
       ImageIndex = 34
     end
     object ppageRemove: TMenuItem
-      Action = acPageRemove
       Caption = 'ppageRemove'
+      OnClick = ppageRemoveClick
     end
     object ppageProperties: TMenuItem
       Action = acPageProp
